--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,5 +28,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          cd $GITHUB_WORKSPACE
-          ls
+          cd $GITHUB_WORKSPACE/build
+          sh build.sh
