--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,3 +30,15 @@ jobs:
         run: |
           cd $GITHUB_WORKSPACE/build
           sh build.sh
+          
+             - name: Commit files
+            run: |
+            git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+            git config --local user.name "github-actions[bot]"
+            git commit -m "Add changes" -a
+            - name: Push changes
+            uses: ad-m/github-push-action@master
+            with:
+            github_token: ${{ secrets.GITHUB_TOKEN }}
+            branch: ${{ github.ref }}
+          
