--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,7 @@ jobs:
         run: |
             git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
             git config --local user.name "github-actions[bot]"
+            git add $GITHUB_WORKSPACE/master.txt
             git commit -m "Add changes" -a
       - name: Push changes
         uses: ad-m/github-push-action@master
