--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,9 +41,9 @@ jobs:
             git config --local user.name "github-actions[bot]"
             git add $GITHUB_WORKSPACE/master.txt
             git commit -m "Add changes" -a
-      - name: Push changes
-        if: steps.git-check.outputs.modified == 'true'
-        uses: ad-m/github-push-action@master
-        with:
-            github_token: ${{ secrets.GITHUB_TOKEN }}
-            branch: ${{ github.ref }}
+            git push
+      #- name: Push changes
+      #  uses: ad-m/github-push-action@master
+      #  with:
+      #      github_token: ${{ secrets.GITHUB_TOKEN }}
+      #      branch: ${{ github.ref }}
