--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,17 +31,13 @@ jobs:
           cd $GITHUB_WORKSPACE/build
           sh build.sh
           
-      - name: Check for modified files
-        id: git-check
-        run: echo ::set-output name=modified::$([ -z "`git status --porcelain`" ] && echo "false" || echo "true")
       - name: Commit latest release version
-        if: steps.git-check.outputs.modified == 'true'
         run: |
             git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
             git config --local user.name "github-actions[bot]"
             git add $GITHUB_WORKSPACE/master.txt
             git commit -m "Add changes" -a
-            git push
+            git diff --quiet && git diff --staged --quiet || git push
       #- name: Push changes
       #  uses: ad-m/github-push-action@master
       #  with:
