--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
             git config --local user.name "github-actions[bot]"
             git add $GITHUB_WORKSPACE/master.txt
             git commit -m "Add changes" -a || echo "No changes to commit"
-            git diff --quiet && git diff --staged --quiet || git push
+            git push
       #- name: Push changes
       #  uses: ad-m/github-push-action@master
       #  with:
