--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
         run: |
             git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
             git config --local user.name "github-actions[bot]"
-            git add $GITHUB_WORKSPACE/master.txt
+            git add $GITHUB_WORKSPACE/dim-master.txt
             git commit -m "Add changes" -a || echo "No changes to commit"
             git push
       #- name: Push changes
